source/sass/blocks/page-header.scss
.header {
  min-height: 70px;

  @media (min-width: $small-desktop-width) {
    min-height: 90px;
  }
}

.header__fixed-container {
  padding-top: 20px;
  position: fixed;
  width: 100%;
  color: $palette-darkcontrast;
  background-color: $palette-brightcontrast;
  z-index: 100;
  box-shadow: 0 3px 50px rgba($palette-darkcontrast, 15%);

  @media (min-width: $small-desktop-width) {
    padding-top: 25px;
    min-height: 65px;
  }
}

.header .wrapper {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  min-height: 50px;

  @media (min-width: $small-desktop-width) {
    min-height: 62px;
  }
}

.header__logo-block {
  flex-basis: 17%;

  @media (min-width: $small-desktop-width) {
    flex-basis: 8%;
  }

  @media (min-width: $desktop-width) {
    flex-basis: 225px;
  }
}

.header a {
  text-decoration: none;
}

.header__logo {
  display: inline-block;
  padding: 5px 0;

  @media (min-width: $small-desktop-width) {
    padding: 3px 0;
  }

  & img {
    width: 49px;
    height: 16px;

    @media (min-width: $small-desktop-width) {
      padding: 3px 0 5px;
      width: 86px;
      height: 27px;
    }
  }
}

.header__nav-block {
  position: relative;
  flex-basis: 17%;
  order: 3;

  @media (min-width: $small-desktop-width) {
    order: 0;
    flex-basis: 49.5%;
  }

  @media (min-width: $desktop-width) {
    flex-basis: 775px;
    padding: 0 5px;
  }
}

.header__nav {
  position: absolute;
  top: 45px;
  right: 0;
  transition: transform 0.3s ease-in 0.3s;
  pointer-events: none;

  @media (min-width: $small-desktop-width) {
    margin: 0 2px;
    position: static;
    display: block;
    pointer-events: auto;
  }

  @media (min-width: $desktop-width) {
    margin: 0 18px 0 0;
  }

  .header__nav-block--open & {
    pointer-events: auto;
  }
}

.header__nav-list {
  &--desktop {
    display: none;

    @media (min-width: $small-desktop-width) {
      display: flex;
      justify-content: space-between;
      margin: 0;
      padding: 0;
    }

    @media (min-width: $desktop-width) {
      justify-content: flex-end;
    }
  }

  &--mobile {
    margin: 0;
    padding: 2px 17px 25px 8px;
    min-width: 245px;
    text-align: right;
    background-color: $palette-brightcontrast;
    border-left: 1px solid $palette-back;
    border-bottom: 1px solid $palette-back;
    transform: translateX(150%);
    transition: transform 0.7s ease-out;

    @media (min-width: $small-desktop-width) {
      display: none;
    }
  }
}

.header__nav-block--open .header__nav-list--mobile {
  transform: translateX(10px);
}

.header__nav-item {
  position: relative;
  font-size: 16px;
}

@keyframes submenu {
  0% {
    opacity: 0;
    transform: translate3d(0, -10px, 0);
  }

  75% {
    opacity: 1;
  }

  100% {
    opacity: 1;
    transform: translate3d(0, 0, 0);
  }
}

.header__sub-container {
  @media (min-width: $small-desktop-width) {
    display: none;
    position: absolute;
    top: 35px;
    left: 15px;
    padding-top: 5px;
    opacity: 0;
    transform: translate3d(0, -10px, 0);
  }

  @media (min-width: $desktop-width) {
    left: 75px;
  }
}

.header__nav-item:hover .header__sub-container,
.header__nav-item:focus-within .header__sub-container {
  @media (min-width: $small-desktop-width) {
    display: block;
    animation: submenu 0.75s;
    animation-fill-mode: forwards;
  }
}

.header__sub-menu {
  display: flex;
  flex-flow: row wrap;
  justify-content: flex-end;
  z-index: 100;

  @media (min-width: $small-desktop-width) {
    flex-flow: column nowrap;
    justify-content: flex-start;
    row-gap: 6px;
    min-width: 150px;
    background-color: rgba(#ffffff, 0.85);
    border-radius: 25px;
  }

  @media (min-width: $desktop-width) {
    min-width: 230px;
    min-height: 62px;
  }
}

.header__sub-item {
  margin: 0 0 8px 26px;

  &:nth-child(1) {
    margin-left: 50px;

    @media (min-width: $small-desktop-width) {
      margin: 0;
    }
  }

  @media (min-width: $small-desktop-width) {
    margin: 0;
  }
}

.header__call-block {
  flex-basis: 60%;
  flex-direction: row;
  justify-content: space-between;

  @media (min-width: $small-desktop-width) {
    flex-basis: 31.25%;
    display: flex;
  }
}

.header__phone {
  flex-basis: 55%;
  display: flex;
  flex-direction: column;
  align-items: center;
  margin: 0 0 11px;

  @media (min-width: $small-desktop-width) {
    flex-basis: 190px;
    margin: 3px 0;
  }

  @media (min-width: $desktop-width) {
    flex-basis: 225px;
  }
}

.header__tel {
  font-size: 14px;
  font-weight: 700;
  margin: 0 5px 3px;
  padding: 2px 0;

  @media (min-width: $small-desktop-width) {
    margin-bottom: 0;
    padding: 0;
    font-size: 16px;
  }
}

.header__tel-time {
  margin: 0 5px;
  padding: 0;
  font-size: 12px;

  @media (min-width: $small-desktop-width) {
    font-size: 14px;
    line-height: 16px;
  }
}

.header__callback {
  display: none;
  flex-basis: 40%;
  margin: 2px 0;
  padding: 11px 9px 9px;
  align-self: flex-start;
  font-size: 14px;
  line-height: 18px;
  text-transform: uppercase;
  word-break: normal;
  letter-spacing: 0.04em;
  background-color: $palette-accent;
  border: 1px solid $palette-darkcontrast;
  border-radius: 5px;
  transition: color 0.3s, background-color 0.42s;

  &:hover {
    color: $palette-brightcontrast;
    background-color: $palette-prime;
  }

  @media (min-width: $small-desktop-width) {
    display: block;
    flex-basis: 200px;
    margin: 0;
  }

  @media (min-width: $desktop-width) {
    margin: 0 0 0 25px;
  }
}

.header__burger {
  display: block;
  position: relative;
  width: 28px;
  height: 28px;
  margin-left: auto;
  z-index: 100;

  @media (min-width: $small-desktop-width) {
    display: none;
  }
}

.header__burger-line {
  display: block;
  position: absolute;
  left: 0;
  right: 0;
  height: 1px;
  background-color: $palette-darkcontrast;
  transition: transform 0.9s ease-out, top 0.42s, background-color 0.42s;

  &:nth-child(1) {
    top: 10%;
  }

  &:nth-child(2) {
    top: 45%;
  }

  &:nth-child(3) {
    top: 45%;
  }

  &:nth-child(4) {
    top: 80%;
  }

  .header__nav-block--open &:nth-child(1) {
    top: 45%;
    transform: scale(0) rotate(45deg);
  }

  .header__nav-block--open &:nth-child(2) {
    transform: rotate(-135deg);
  }

  .header__nav-block--open &:nth-child(3) {
    transform: rotate(135deg);
  }

  .header__nav-block--open &:nth-child(4) {
    top: 45%;
    transform: scale(0) rotate(-45deg);
  }

  .header__burger:hover &,
  .header__burger:focus & {
    background-color: $palette-dim;
  }
}

